<resources>
    <string name="app_name">My Mail Box</string>
    <string name="app_tag_line">Where all your email are collected</string>
    <string name="email_matter">
        Hi, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Regards,##name##
    </string>
    <string name="label_inbox">Inbox</string>
    <string name="label_to_me">to me</string>
    <string name="label_view_details">View Details</string>
    <string name="label_hide_details">Hide Details</string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string name="label_date">Date:</string>
    <string name="my_name">Vaibhav Dhunde</string>
    <string name="my_email">vaibhavdhunde94@gmail.com</string>
    <string name="name_placeholder">##name##</string>
</resources>
