<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/text_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/image_bookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="This is a subject. This is another line of the subject. This has to be the biggest line of the subject so far but this is slightk" />

    <ImageView
        android:id="@+id/image_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintBottom_toBottomOf="@+id/text_subject"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_label_inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        android:paddingLeft="8dp"
        android:paddingTop="1dp"
        android:paddingRight="8dp"
        android:paddingBottom="1dp"
        android:text="@string/label_inbox"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="@+id/text_subject"
        app:layout_constraintTop_toBottomOf="@+id/text_subject" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/text_label_inbox"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_image_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:srcCompat="@tools:sample/avatars[4]" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="@+id/image_profile"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/text_to_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to_me"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="@+id/text_to_me"
        app:layout_constraintTop_toBottomOf="@+id/text_to_me"
        tools:text="@tools:sample/date/ddmmyy" />

    <TextView
        android:id="@+id/text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/label_view_details"

        android:textColor="@color/view_details"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_date"
        app:layout_constraintStart_toEndOf="@+id/text_date" />

    <android.support.constraint.Group
        android:id="@+id/view_details_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="text_date,text_view_details" />

    <TextView
        android:id="@+id/text_hide_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hide_details"
        android:textColor="@color/view_details"
        app:layout_constraintStart_toStartOf="@+id/text_to_me"
        app:layout_constraintTop_toBottomOf="@+id/text_to_me" />

    <TextView
        android:id="@+id/text_label_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_from"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_hide_details"
        app:layout_constraintTop_toBottomOf="@+id/text_hide_details" />

    <TextView
        android:id="@+id/text_label_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_to"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_label_from"
        app:layout_constraintTop_toBottomOf="@+id/text_label_from" />

    <TextView
        android:id="@+id/text_label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_date"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_label_to"
        app:layout_constraintTop_toBottomOf="@+id/text_to_email" />

    <TextView
        android:id="@+id/text_from_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/text_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_label_from"
        app:layout_constraintTop_toTopOf="@+id/text_label_from"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/view_details"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_from_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_from_name"
        tools:text="example@testing.com" />

    <TextView
        android:id="@+id/text_to_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_from_name"
        app:layout_constraintTop_toTopOf="@+id/text_label_to" />

    <TextView
        android:id="@+id/text_to_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/my_email"
        android:textColor="@color/view_details"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_to_name"
        app:layout_constraintTop_toBottomOf="@+id/text_to_name" />

    <TextView
        android:id="@+id/text_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_to_email"
        app:layout_constraintTop_toTopOf="@+id/text_label_date"
        tools:text="@tools:sample/date/ddmmyy" />

    <android.support.constraint.Group
        android:id="@+id/details_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_from_name,text_label_from,text_label_date,text_label_to,text_to_email,text_to_name,text_hide_details,text_details_date,text_email" />

    <TextView
        android:id="@+id/text_matter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_date"
        app:layout_goneMarginTop="40dp"
        tools:text="@string/email_matter" />

</android.support.constraint.ConstraintLayout>